    as convenient accessors to those child nodes and elements.

  * Improvement: added Element.expectFirst(cssQuery), which is just like Element.selectFirst(), but instead of returning
    a null if there is no match, will throw an IllegalArgumentException. This is useful if you want to simply abort
    processing if an expected match is not found.

  * Bugfix: when using the readToByteBuffer method, such as in Connection.Response.body(), if the document has not
    already been parsed and must be read fully, and there is any maximum buffer size being applied, only the default
    internal buffer size is read.
    <https://github.com/jhy/jsoup/issues/1774>

  * Bugfix: when serializing HTML, newlines in elements descending from a pre tag were incorrectly skipped. That caused
    what should have been preformatted output to instead be a run of text.
    <https://github.com/jhy/jsoup/issues/1776>

  * Bugfix: when pretty-print serializing HTML, newlines separating phrasing content (e.g. a <span> tag within a <p> tag
    would be incorrectly skipped, instead of normalized to a space. Additionally, improved space normalization between
    other end of line occurences, and whitespace handling after a closing </body>
    <https://github.com/jhy/jsoup/issues/1787>

*** Release 1.15.1 [2022-May-15]
  * Change: removed previously deprecated methods and classes (including org.jsoup.safety.Whitelist; use
    org.jsoup.safety.Safelist instead).

  * Improvement: when converting jsoup Documents to W3C Documents in W3CDom, preserve HTML valid attribute names if the
    input document is using the HTML syntax. (Previously, would always coerce using the more restrictive XML syntax.)
    <https://github.com/jhy/jsoup/pull/1648>

  * Improvement: added the :containsWholeText(text) selector, to match against non-normalized Element text. That can be
    useful when elements can only be distinguished by e.g. specific case, or leading whitespace, etc.