@@ -78,6 +78,10 @@ public class DocumentType extends LeafNode {
 
     @Override
     void outerHtmlHead(Appendable accum, int depth, Document.OutputSettings out) throws IOException {
+        // add a newline if the doctype has a preceding node (which must be a comment)
+        if (siblingIndex > 0 && out.prettyPrint())
+            accum.append('\n');
+
         if (out.syntax() == Syntax.html && !has(PUBLIC_ID) && !has(SYSTEM_ID)) {
             // looks like a html5 doctype, go lowercase for aesthetics
             accum.append("<!doctype");
